--- a/src/app.html
+++ b/src/app.html
@@ -2,9 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/TPC OPH 2024 logo.webp" />
+		<link rel="icon" href="%sveltekit.assets%/peanut-butter-chocolat-mint-logo.webp" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>TPC_openhouse2024</title>
+		<title>peanut-butter-chocolat-mint</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
